--- a/static/css/nav.css
+++ b/static/css/nav.css
@@ -6,8 +6,8 @@
 
 #main{
 	width: 100%;
-	height: 100vh;
-	background-image: url(1.jpg);
+	height: 80px;
+	background-image: url(/images/1.jpg);
 	background-size: cover;	
 }
 
